Fixed button not working on firefox, cleaned code added reps #12

--- a/src/header.css
+++ b/src/header.css
@@ -29,12 +29,16 @@ header nav {
     margin-right: 10px;
 }
 
-nav button:hover {
+nav a button:hover {
     background-color: rgba(255,255,255,0.1) !important;
 }
 
 button a:visited {
     color: white;
+}
+
+nav button {
+    color: white !important;
 }
 
 @media screen and (min-width: 800px) {
